# Camera-Mobile-Manipulator

./: CMakeLists.txt  README.md  package.xml
cmm_darknet/: CMakeLists.txt  package.xml
cmm_darknet/src/: bounding_box_subscriber.py  bounding_box_subscriber2.py  pub.py
cmm_darknet_msgs/: CMakeLists.txt  package.xml
cmm_darknet_msgs/msg/: DarknetResult.msg
cmm_gazebo/: CMakeLists.txt  Readme.md  package.xml
cmm_gazebo/launch/: ridgeback_iiwa_gazebo.launch
cmm_gazebo/urdf/: iiwa7_camera.xacro  ridgeback_iiwa_robot_camera.urdf.xacro
cmm_gazebo/worlds/: cafe.world  one_room.world  one_room_standing.world  random_person.world  simple_env_1.world  three_room.world  walk.world  walk_empty.world
cmm_gazebo/worlds/mesh/: stand.dae
cmm_gazebo/worlds/mesh/one_room/: model.config  model.sdf
cmm_iiwa/: CMakeLists.txt  Readme.md  package.xml
cmm_iiwa/input/: Bear_Coordinates2.txt  camera_roll.txt  init.txt  move_away.txt  move_closer.txt  move_in_out.txt  pan1.txt  pan2.txt  test.txt  tilt.txt  tilt_sideways.txt  whip.txt
cmm_iiwa/launch/: iiwa_drawing_moveit.launch  iiwa_updown_moveit.launch
cmm_iiwa/src/: end_effector.cpp  filming_methods.cpp  follow_person.py  init_pose.cpp  moveit_camera.cpp  no_moveit_camera.cpp  updown_moveit.cpp
cmm_iiwa/tested/: camera_roll.txt  close_up.txt  one_person_rotate.txt  test.txt  test1.txt  tilt_sideways.txt  tilt_up.txt  tilt_up_down.txt  up_down.txt  walk_around.txt
cmm_ridgeback/: CMakeLists.txt  package.xml
cmm_ridgeback/src/: follow_person.py  move.py  ridgeback.py  smooth_path.py  smooth_path2.py
cmm_viz/: CMakeLists.txt  package.xml
cmm_viz/launch/: mobile_manipulation_interactive_demo.launch  view_robot.launch
cmm_viz/rviz/: interactive_camera.rviz
launch/: ridgeback_iiwa_gazebo.launch
src/: image_subscriber.cpp  image_subscriber.py
worlds/: cafe.world
